# secrets-platform

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TASK.md  docker-compose.yml
.githooks/: pre-commit
api-server/: Cargo.toml
api-server/migrations/: 0001_create_secrets.sql
api-server/src/: config.rs  db.rs  main.rs  state.rs
api-server/src/controller/: healthcheck.rs  mod.rs  secret.rs
api-server/src/repository/: secret.rs
api-server/src/routes/: secret.rs
cli/: Cargo.toml
docs/: PROJECT.md
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  models.rs  request.rs
