[workspace]
members = ["api-server", "cli", "shared"]

resolver = "2"

[workspace.dependencies]

chrono = { version = "0.4.44", features = ["serde"]}
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }