[workspace]
members = ["api-server", "cli", "shared"]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.51.1", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.9" }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
