[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", features = ["axum", "db"] }
sqlx = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tower-http = { version = "0.7.0", features = ["trace"] }
